[project]
name = "yapcap"
version = "0.1.0"
description = "Record audio and save buffered clips."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "sounddevice>=0.5.2",
    "typer>=0.21.1",
]

[project.scripts]
yapcap = "yapcap:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
